--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="d-flex flex-row justify-content-between">
             <ul class="nav row" id="home-nav">
                 <li class="nav-item align-self-center">
-                    <a href="#header" class="nav-link">
+                    <a href="#portfolio" class="nav-link">
                         PORTFOLIO
                     </a>
                 </li>
@@ -31,14 +31,14 @@
                     </a>
                 </li>
             </ul>
-            <a href="#home">
+            <a href="#hero">
             <img src="img/MARIA-BRICENO-LOGO-1.png" alt="Maria Briceno">
             </a>
             <ul class="nav row" id="icon-bar">
-                <li class="d-flex nav-item align-self-center"><a href="http://instagram.com/bsmaria" class="nav-link" ><i class="fab fa-instagram text-center"></i></a></li>
-                <li class="d-flex nav-item align-self-center"><a href="http://behance.net/mariabriceno" class="nav-link"><i class="fab fa-behance text-center"></i></a></li>
-                <li class="d-flex nav-item align-self-center"><a href="http://github.com/bsmaria_" class="nav-link"><i class="fab fa-github text-center"></i></a></li>
-                <li class="d-flex nav-item align-self-center"><a href="http://linkedin.com/in/mariabriceno" class="nav-link"><i class="fab fa-linkedin text-center"></i></a></li>
+                <li class="d-flex nav-item align-self-center"><a href="http://instagram.com/bsmaria_" target="_blank" class="nav-link" ><i class="fab fa-instagram text-center"></i></a></li>
+                <li class="d-flex nav-item align-self-center"><a href="http://behance.net/mariabriceno" target="_blank" class="nav-link"><i class="fab fa-behance text-center"></i></a></li>
+                <li class="d-flex nav-item align-self-center"><a href="http://github.com/bsmaria" target="_blank" class="nav-link"><i class="fab fa-github text-center"></i></a></li>
+                <li class="d-flex nav-item align-self-center"><a href="http://linkedin.com/in/bmaria" target="_blank" class="nav-link"><i class="fab fa-linkedin text-center"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -46,79 +46,93 @@
         <section class="d-flex " id="hero">            
             <ul class="d-flex flex-row justify-content-around " id="home">
                 <li id="scroll-secuence"></li>
-                <li class="align-self-end"><img src="img/MARIA-BRICENO-PORTRAIT.png" alt="Maria Briceño Photo"></li>
+                <li class="align-self-end"><img src="img/MARIA-BRICENO-PORTRAIT-20.png" alt="Maria Briceño Photo"></li>
                 <li class=" align-self-center" id="hero-text">
                     <p>I'll help your brand stand out through well thought Graphic Design, dynamic Motion Graphics and Full
                         Stack Web Development_</p>
                     <a href="#contact">LET'S TALK!</a>
-                    <p id="hero-main-links">Take a look at my <a href="http://www.behance.com/mariabriceno">Behance</a>, <a
+                   <!--<p id="hero-main-links">Take a look at my <a href="http://www.behance.com/mariabriceno">Behance</a>, <a
                             href="http://www.github.com/bsmaria">Github</a> and <a
-                            href="http://www.linkedin.com/in/mariabriceno">LinkedIn.</a></p>
+                            href="http://www.linkedin.com/in/mariabriceno">LinkedIn.</a></p> --> 
                 </li>
             </ul>
         </section>
         <section id="inspiring">
             <p>With <strong>good communication</strong>  and  <strong>logic thinking</strong> <br> all can be achived.</p>
         </section> 
-        <section class="d-flex flex-column align-items-center" id="portfolio">
+        <section class="d-flex align-items-center" id="portfolio">
             <ul class="d-flex flex-column" id="portfolio-content">
                 <li id="portfolio-heading">
                     <h2>PORTFOLIO</h2>
                 </li>
-                <li class="grid" id="portfolio-galery-1">
-                    <ul class="" id="gd-item">
-                        <li class="portfolio-item" >
-                            <h3>GRAPHIC DESIGN</h3>
+                <li class="d-flex justify-content-center" id="portfolio-galery-1">
+                    <ul class="d-flex flex-row align-items-center justify-content-between" id="portfolio-items">
+                        <li class="portfolio-item d-flex align-items-center justify-content-center">
+                            <h3 class="port-text "><a href="http://behance.net/mariabriceno" target="_blank">GRAPHIC <br> DESIGN</a></h3>
                             <div id="graphic-port">
+                                <a href="http://behance.net/mariabriceno" target="_blank">
                                 <img src="img/a1145580599725.5ce5ac218a422.jpg" alt="">
+                                 </a>
                             </div>
                         </li>
-                    </ul>
-                    <ul class="flex-column" id="mg-item">
-                        <li class="portfolio-item">
-                            <h3>MOTION GRAPHICS</h3>
+                        <li class="portfolio-item d-flex align-items-center justify-content-center">
+                            <h3 class="port-text"><a href="https://www.behance.net/gallery/80602301/Motion-Graphics-VOL-1" target="_blank">MOTION GRAPHICS</a></h3>
                             <div id="motion-port">
+                                <a href="https://www.behance.net/gallery/80602301/Motion-Graphics-VOL-1" target="_blank">
                                 <img src="img/dfedbb105270129.5f7526302ae01.jpg" alt="">
+                                 </a>
                             </div>
                             
                         </li>
-                        <li class="portfolio-item">
-                            <h3>UI/UX DESIGN</h3>
+                        <!--
+                        <li class="portfolio-item d-flex align-items-center justify-content-center">
+                            <h3 class="port-text">UI/UX <br> DESIGN</h3>
                             <div id="ux-port">
                                 <img src="img/sd.jpg" alt="">
                             </div>
-                        </li>
-                    </ul>
-                    <ul class="flex-column" id="fe-item">
-                        <li class="portfolio-item">
-                            <h3>FRONT-END DEVELOPMENT</h3>
+                        </li> -->
+                        <li class="portfolio-item d-flex align-items-center justify-content-center">
+                            <h3 class="port-text"><a href="http://github.com/bsmaria" target="_blank">FRONT-END DEVELOPMENT</a></h3>
                             <div id="frontend-port">
-                                <img src="img/a1145580599725.5ce5ac218a422.jpg" alt="">
+                                <a href="http://github.com/bsmaria" target="_blank">
+                                <img src="img/sd.jpg" alt="">
+                            </a>
                             </div>
                         </li>
                     </ul>
                 </li>            
             </ul>
         </section>
-        <section id="contact">
-            <ul>
-                <li>
-                    <h3>Say Hi!</h3>
-                    <p>If you want to work with me, give me some feedback or simply say hi get in touch trough my email!
+        <section class="d-flex flex-row align-items-center justify-content-between" id="contact">
+            <ul class="d-flex align-items-center" id="form-contact">
+                <li class="" id="form-inside">
+                    <h3>SAY HI!</h3>
+                    <p>If you want to work with me, <br> give me some feedback or simply say hi <br> get in touch trough my email!
                     </p>
-                    <p>bmaria.contact@gmail.com</p>
+                    <p id="contact-text-email">bmaria.contact@gmail.com</p>
+                    <!--
+                    <form action="" method="post" id="primary-form">
+                        <input type="text" name="name" id="name" placeholder="Name. Ex: Jhon Doe"required><br>
+                        <input type="email" name="mail" id="name" placeholder="Email. Ex: xxxx@email.com" required><br>
+                        <input type="text" name="location" id="location" placeholder="Where are you from?" required><br>
+                        <textarea name="message" id="message" cols="150" rows="10" placeholder="What do you need?" required></textarea><br>
+                        <button type="submit">SEND</button>
+                    </form>
+                    -->
                 </li>
+            </ul>
+            <ul class="d-flex align-items-center" id="img-contact">
                 <li>
-                
+                    <img src="img/IMG_1074-d-21.jpg" alt="">
                 </li>
             </ul>
         </section>
     </main>
+    <!--
     <footer>
         <ul class="row">
             <li>
                 <img src="img/maria-briceno-mini-logo-17.png" alt="Maria briceno logo">
-                <p>Follow Me!</p>
                 <ul>
                     <li><a href=""><i class="fab fa-behance"></i></a></li>
                     <li><a href=""><i class="fab fa-linkedin"></i></a></li>
@@ -132,9 +146,22 @@
                     <li><a href="http://www.ruzestudio.co"></a>RUZ ESTUDIO</li>
                     <li><a href="#"></a></li>
                 </ul>
+                <ul> Enlaces de Interés
+                    <li><a href="http://www.ruzestudio.co"></a>RUZ ESTUDIO</li>
+                    <li><a href="#"></a></li>
+                </ul>
+                <ul> Enlaces de Interés
+                    <li><a href="http://www.ruzestudio.co"></a>RUZ ESTUDIO</li>
+                    <li><a href="#"></a></li>
+                </ul>
             </li>
         </ul>
-    </footer>
+        <ul>
+            <li>
+                <p>BY MARIA BRICENO. 2020</p>
+            </li>
+        </ul>
+    </footer> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
 </body>
