--- a/index.html
+++ b/index.html
@@ -128,42 +128,44 @@
             </ul>
         </section>
     </main>
-    <!--
-    <footer>
-        <ul class="row">
-            <li>
+    
+    <footer class="d-flex flex-column align-items-center">
+        <ul class="d-flex flex-column align-items-center justify-content-center">
+            <li  class="text-icons">
                 <img src="img/maria-briceno-mini-logo-17.png" alt="Maria briceno logo">
-                <ul>
-                    <li><a href=""><i class="fab fa-behance"></i></a></li>
-                    <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href=""><i class="fab fa-github"></i></a></li>
-                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                    <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                <ul class="nav row d-flex justify-content-center" id="text-icons-inside">
+                    <li class="nav-item" ><a href="https://behance.net/mariabriceno" class="nav-link" target="_blank"><i class="fab fa-behance" ></i></a></li>
+                    <li class="nav-item"><a href="https://github.com/bsmaria" class="nav-link" target="_blank"><i class="fab fa-github"></i></a></li>
+                    <li class="nav-item"><a href="https://linkedin.com/in/bmaria" class="nav-link" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                    <li class="nav-item"><a href="https://twitch.tv/bsmaria_" class="nav-link" target="_blank"><i class="fab fa-twitch"></i></a></li>
+                    <li class="nav-item"><a href="https://instagram.com/bsmaria_" class="nav-link" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                    <li class="nav-item"><a href="https://twitter.com/bsmaria_" class="nav-link" target="_blank"><i class="fab fa-twitter"></i></a></li>
                 </ul>
             </li>
-            <li>
-                <ul> Enlaces de Interés
-                    <li><a href="http://www.ruzestudio.co"></a>RUZ ESTUDIO</li>
-                    <li><a href="#"></a></li>
+            <li class="enlaces-de-interes d-flex justify-content-around">
+                <ul> <p>Contact</p> 
+                    <li><i class="fas fa-map-marker-alt"></i>Buenos Aires, Aregentina</li>
+                    <li><i class="fas fa-phone"></i>(+54) 9 11 2729 7409</li>
+                    <li><i class="fas fa-envelope"></i>bmaria.contact@gmail.com</li>
                 </ul>
-                <ul> Enlaces de Interés
-                    <li><a href="http://www.ruzestudio.co"></a>RUZ ESTUDIO</li>
-                    <li><a href="#"></a></li>
+                <ul> <p>Enlaces de Interés</p> 
+                    <li><a href="https://www.ruzestudio.co" target="_blank">RUZ ESTUDIO</a></li>
+                    <li><a href="https:/uycreativas.com.uy" target="_blank">UY! CREATIVAS</a></li>
+                    <li><a href="https://twitch.tv/bsmaria_" target="_blank">TWITCH CHANNEL</a></li>
+                    <li><a href="https://youtube.com/ruzestudio" target="_blank">YOUTUBE CHANNEL</a></li>
                 </ul>
-                <ul> Enlaces de Interés
-                    <li><a href="http://www.ruzestudio.co"></a>RUZ ESTUDIO</li>
-                    <li><a href="#"></a></li>
-                </ul>
+            </li>
+            <li class="up-btn">
+                <a href="#hero"><i class="fas fa-chevron-up"></i></a>
             </li>
         </ul>
-        <ul>
+        <ul class="copyright">
             <li>
                 <p>BY MARIA BRICENO. 2020</p>
             </li>
         </ul>
-    </footer> -->
+    </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
 </body>
-
 </html>
