--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
         <section class="d-flex " id="hero">            
             <ul class="d-flex flex-row justify-content-around " id="home">
-                <li id="scroll-secuence"></li>
+                <li id="scroll-secuence"><span id="scroll-secuence-inside"></span></li>
                 <li class="align-self-end"><img src="img/MARIA-BRICENO-PORTRAIT-20.png" alt="Maria Briceño Photo"></li>
                 <li class=" align-self-center" id="hero-text">
                     <p>I'll help your brand stand out through well thought Graphic Design, dynamic Motion Graphics and Full
@@ -165,6 +165,7 @@
             </li>
         </ul>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
 </body>
