--- a/index.html
+++ b/index.html
@@ -6,180 +6,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="img/cuadro-14.png" type="image/x-icon">
     <title>Maria Briceño</title>
-    <link rel="canonical" href="https://maria-briceno.com/">
+    <link rel="canonical" href="https://www.maria-briceno.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
-        integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li>
-                    <a>
-                        PORTFOLIO
-                    </a>
-                </li>
-                <li>
-                    <a href="#contact">
-                        CONTACT
-                    </a>
-                </li>
-            </ul>
-            <a href="#hero">
-                <img src="img/MARIA-BRICENO-LOGO-1.png" alt="Maria Briceno">
-            </a>
-            <ul class="nav row" id="icon-bar">
-                <li><a href="http://behance.net/mariabriceno" target="_blank"><i
-                            class="fab fa-behance text-center"></i></a></li>
-                <li><a href="http://github.com/bsmaria" target="_blank"><i class="fab fa-github text-center"></i></a>
-                </li>
-                <li><a href="http://linkedin.com/in/bmaria" target="_blank"><i
-                            class="fab fa-linkedin text-center"></i></a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <ul>
-                <li><span></span></li>
-                <li>
-                    <p>HI! </p>
-                    <p>I'M MARIA</p>
-                    <p> I'll help your brand stand out through well thought Graphic Design, dynamic Motion Graphics and
-                        Front End web development.</p>
-                    <a href="#contact">LET'S TALK!</a>
-                </li>
-                <li><img src="img/MARIA-BRICENO-PORTRAIT-20.png" alt="Maria Briceño Photo"></li>
-            </ul>
-        </section>
-        <section id="portfolio">
-            <ul id="portfolio-content">
-                <li>
-                    <h2>PORTFOLIO</h2>
-                </li>
-
-                <li id="portfolio-galery-1">
-                    <ul id="portfolio-items">
-                        <li>
-
-                            <div>
-                                <a href="http://behance.net/mariabriceno" target="_blank">
-                                    <img src="img/a1145580599725.5ce5ac218a422.jpg" alt="">
-                                </a>
-                                <h3><a href="http://behance.net/mariabriceno" target="_blank">GRAPHIC <br> DESIGN</a>
-                                </h3>
-
-                            </div>
-                        </li>
-                        <li>
-                            <h3><a href="https://www.behance.net/gallery/80602301/Motion-Graphics-VOL-1"
-                                    target="_blank">MOTION <br> GRAPHICS</a></h3>
-                            <div>
-                                <a href="https://www.behance.net/gallery/80602301/Motion-Graphics-VOL-1"
-                                    target="_blank">
-                                    <img src="img/dfedbb105270129.5f7526302ae01.jpg" alt="">
-                                </a>
-                            </div>
-
-                        </li>
-                        <li>
-                            <h3><a href="http://github.com/bsmaria" target="_blank">FRONT-END DEVELOPMENT</a></h3>
-                            <div>
-                                <a href="http://github.com/bsmaria" target="_blank">
-                                    <img src="img/sd.jpg" alt="">
-                                </a>
-                            </div>
-                        </li>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between  " i>
+            <a class="navbar-brand" href="#"><img src="img/MARIA-BRICENO-LOGO-1.png" height="40px" width="40px"  class="d-inline-block align-top" alt="Maria Briceño"></a>
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+             </button>
+                <div class="collapse navbar-collapse" id="navigation-links">
+                    <ul class="navbar-nav mr-auto">                        
+                        <li class="nav-item"> <a class="nav-link" href="#">Portfolio</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="#">Blog</a> </li>
+                        <li class="nav-item"> <a class="nav-link" href="#">Contact</a> </li>                        
+                    </ul>                                        
+                </div>
+                <div class="collapse navbar-collapse" id="navigation-social-media">
+                    <ul class="navbar-nav mr-auto">                        
+                        <li class="nav-item"> <a class="nav-link" href=""><i class="fab fa-behance"></i></a>  </li>
+                        <li class="nav-item"> <a class="nav-link" href=""><i class="fab fa-linkedin"></i></a>  </li>
+                        <li class="nav-item"> <a class="nav-link" href=""><i class="fab fa-instagram"></i></a>  </li>      
                     </ul>
-                </li>
-            </ul>
-        </section>
-        <section>
+                </div>
+                
+        </nav>
 
-            <p>With <strong>good communication</strong> and <strong>logic thinking</strong> <br> all can be achived.</p>
-        </section>
-
-        <section id="contact">
-            <ul id="form-contact">
-                <li id="form-inside">
-                    <h3>SAY HI!</h3>
-                    <p>If you want to work with me, <br> give me some feedback or simply say hi <br> get in touch trough
-                        my email!
-                    </p>
-                    <p>bmaria.contact@gmail.com</p>
-
-                    <form action="" method="post" id="primary-form">
-                        <input type="text" name="name" id="name" placeholder="Name. Ex: Jhon Doe" required><br>
-                        <input type="email" name="mail" id="name" placeholder="Email. Ex: xxxx@email.com" required><br>
-                        <input type="text" name="location" id="location" placeholder="Where are you from?" required><br>
-                        <textarea name="message" id="message" cols="150" rows="10" placeholder="What do you need?"
-                            required></textarea><br>
-                        <button type="submit">SEND</button>
-                    </form>
-
-                </li>
-            </ul>
-            <ul id="img-contact">
-                <li>
-                    <img src="img/IMG_1074-d-21.jpg" alt="">
-                </li>
-            </ul>
-        </section>
+    </header>
+    <main class="container-fluid">
+        <ul class="d-flex flex-row justify-content-center align-items-center row " id="hero">
+            <li class="col">
+                <h1>MOTION
+                    AND GRAPHICS
+                    FOR <br> <span>YOUR BUSINESS!</span></h1>
+                <h3>Hello! I'm Maria and I'll help your brand <strong>stand out</strong>  through <strong> well thought Graphic Design and dynamic animations.</strong></h3>
+                <a href="#" id="contact-button">Let's talk!</a>
+            </li>
+            <li class="col">
+                <img src="img/MARIA-BRICENO-PORTRAIT.png" alt="Maria Briceño">
+            </li>
+        </ul>
+        <ul >
+            <li class="container-fluid">
+                <ul class="row">
+                    <li class="col">
+                        <h4>Latest Projects</h4>
+                        <p>Branding, Motion graphics, Social media and more.</p>
+                    </li>
+                    <li class="col">
+                        <a href="#">Visit my Behance</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="row">
+                <ul>
+                    <li class="col">
+                        <img src="" alt="">
+                        <div>                           
+                            <a href=""> title of the piece</a>
+                            <a href="">Published this date</a>                           
+                        </div>
+                    </li>
+                    <li class="col">
+                        <img src="" alt="">
+                        <div>                           
+                            <a href=""> title of the piece</a>
+                            <a href="">Published this date</a>                           
+                        </div>
+                    </li>
+                    <li class="col">
+                        <img src="" alt="">
+                        <div>                           
+                            <a href=""> title of the piece</a>
+                            <a href="">Published this date</a>                           
+                        </div>
+                    </li>
+                    <li class="col">
+                        <img src="" alt="">
+                        <div>                           
+                            <a href=""> title of the piece</a>
+                            <a href="">Published this date</a>                           
+                        </div>
+                    </li>
+                </ul>
+            </li>
+        </ul>
     </main>
-
-    <footer>
-        <ul>
-            <li class="text-icons">
-                <img src="img/maria-briceno-mini-logo-17.png" alt="Maria briceno logo">
-                <ul>
-                    <li><a href="https://behance.net/mariabriceno" class="nav-link" target="_blank"><i
-                                class="fab fa-behance"></i></a></li>
-                    <li><a href="https://github.com/bsmaria" class="nav-link" target="_blank"><i
-                                class="fab fa-github"></i></a></li>
-                    <li><a href="https://linkedin.com/in/bmaria" class="nav-link" target="_blank"><i
-                                class="fab fa-linkedin"></i></a></li>
-                    <li><a href="https://twitch.tv/bsmaria_" class="nav-link" target="_blank"><i
-                                class="fab fa-twitch"></i></a></li>
-                    <li><a href="https://instagram.com/bsmaria_" class="nav-link" target="_blank"><i
-                                class="fab fa-instagram"></i></a></li>
-                    <li><a href="https://twitter.com/bsmaria_" class="nav-link" target="_blank"><i
-                                class="fab fa-twitter"></i></a></li>
-                </ul>
-            </li>
-            <li>
-                <ul>
-                    <p>Contact</p>
-                    <li><i class="fas fa-map-marker-alt"></i>Buenos Aires, Aregentina</li>
-                    <li><i class="fas fa-phone"></i>(+54) 9 11 2729 7409</li>
-                    <li><i class="fas fa-envelope"></i>bmaria.contact@gmail.com</li>
-                </ul>
-                <ul>
-                    <p>Enlaces de Interés</p>
-                    <li><a href="https://www.ruzestudio.co" target="_blank">RUZ ESTUDIO</a></li>
-                    <li><a href="https:/uycreativas.com.uy" target="_blank">UY! CREATIVAS</a></li>
-                    <li><a href="https://twitch.tv/bsmaria_" target="_blank">TWITCH CHANNEL</a></li>
-                    <li><a href="https://youtube.com/ruzestudio" target="_blank">YOUTUBE CHANNEL</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#hero"><i class="fas fa-chevron-up"></i></a>
-            </li>
-        </ul>
-        <ul>
-            <li>
-                <p>BY MARIA BRICENO. 2020</p>
-            </li>
-        </ul>
-    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
