--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     </header>
     <main class="container-fluid justify-content-center p-0">
-        <ul class="d-flex flex-row justify-content-center align-items-center row no-gutters " id="hero">
+        <ul class="row d-flex justify-content-center align-items-center  no-gutters " id="hero">
             <li class="col">
                 <h1>MOTION
                     AND GRAPHICS
@@ -59,13 +59,13 @@
                         Graphic Design and dynamic animations.</strong></h3>
                 <a href="#contact" id="contact-button">Let's talk!</a>
             </li>
-            <li class="col">
+            <li class="col d-flex justify-content-center align-items-end">
                 <img src="img/MARIA-BRICENO-PORTRAIT.png" alt="Maria Briceño">
             </li>
         </ul>
         <ul class="d-flex flex-column justify-content-center align-items-center " id="portfolio">
             <li class="container-fluid">
-                <div class="row justify-content-between title-section">
+                <div class="row justify-content-between title-section" id="portfolio-title">
                     <div class="col-md-7">
                         <h4>Latest Projects</h4>
                         <p>Branding, Motion graphics, Social media and more.</p>
@@ -75,8 +75,8 @@
                     </div>
                 </div>
             </li>
-            <li class="container-fluid justify-content-center">
-                <div class="row">
+            <li class="container-fluid justify-content-center p-0" >
+                <div class="row d-flex no-gutters" id="portfolio-galery">
                     <div class="img-portfolio-hover col">
                         <a href="https://www.behance.net/gallery/105270129/Animated-Character-2d-animation-experiment" target="_blank"><img src="img/dfedbb105270129.5f7526302ae01.jpg" alt="Animated Character"></a>
                         
@@ -175,7 +175,7 @@
                 </div>
             </li>
         </ul>
-        <ul class="d-flex flex-row align-items-center no-gutters" id="contact">
+        <ul class="d-flex align-items-center no-gutters" id="contact">
             <li id="contact-form">
                 <form id="myform" action="/">
                     <h5>Contact Us</h5>
@@ -241,27 +241,27 @@
                                     <h5>Enlaces de interés</h5>
                                     <ul>
                                         <li>
-                                            <a href="">RUZ Estudio</a>
+                                            <a href="https://ruzestudio.co">RUZ Estudio</a>
                                         </li>
                                         <li>
-                                            <a href="">Twitch Channel</a>
+                                            <a href="https://twitch.com/bsmaria_">Twitch Channel</a>
                                         </li>
                                         <li>
-                                            <a href="">Youtube Channel</a>
+                                            <a href="https://youtube.com/ruzestudio">Youtube Channel</a>
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="col d-flex flex-column">
+                                <div class="col d-flex flex-column container-fluid p-0">
                                     <h5>Follow me on instagram!</h5>
-                                    <ul>
-                                        <li>
-                                            <img src="" alt="">
+                                    <ul class="row no-gutters">
+                                        <li clasS="col">
+                                            <img src="" alt="img">
                                         </li>
-                                        <li>
-                                            <img src="" alt="">
+                                        <li class="col">
+                                            <img src="" alt="img">
                                         </li>
-                                        <li>
-                                            <img src="" alt="">
+                                        <li class="col">
+                                            <img src="" alt="img">
                                         </li>
                                     </ul>
                                 </div>
