--- a/blog.html
+++ b/blog.html
@@ -51,94 +51,40 @@
 
         </nav>
     </header>
-    <main class="container-fluid justify-content-center p-0" id="portfolio">
-        <ul class="row d-flex no-gutters" id="portfolio-galery">
-            <li><h4>Looking for a specific project?</h4></li>
-            <li><input type="text"><i class="fas fa-search"></i></li>
-            
-        </ul>
-        <ul class="d-flex flex-column justify-content-center align-items-center " id="portfolio">
-            <li class="container-fluid justify-content-center p-0">
-                <div class="row d-flex no-gutters" id="portfolio-galery">
-                    <div class="img-portfolio-hover col">
-                        <a href="https://www.behance.net/gallery/105270129/Animated-Character-2d-animation-experiment"
-                            target="_blank"><img src="img/dfedbb105270129.5f7526302ae01.jpg"
-                                alt="Animated Character"></a>
-
-                        <div class="portfolio-info">
-                            <a href=""> <i class="fas fa-arrow-alt-circle-right"></i>Animated Character</a>
-                            <a href="">September - 2020</a>
-                        </div>
-                    </div>
-                    <div class="img-portfolio-hover col">
-                        <a href="https://www.behance.net/gallery/105271387/Frame-by-frame-Animation"
-                            target="_blank"></a>
-                        <img src="img/framebyframe.PNG" alt="Frame-by-frame">
-                        <div class="portfolio-info">
-                            <a href=""><i class="fas fa-arrow-alt-circle-right"></i>Frame-by-frame</a>
-                            <a href="">September - 2020</a>
-                        </div>
-                    </div>
-                    <div class="w-100 d-none d-md-block"></div>
-                    <div class="img-portfolio-hover col">
-                        <a href="https://www.behance.net/gallery/90168727/ADS-VOCE-VOCE-by-Greice-Santo?tracking_source=project_owner_other_projects"
-                            target="_blank"><img src="img/greice-santo.PNG" alt="ADS - VOCE VOCE by Greice Santo"></a>
-                        <div class="portfolio-info">
-                            <a href=""><i class="fas fa-arrow-alt-circle-right"></i>ADS - VOCE VOCE by Greice Santo</a>
-                            <a href="">January - 2020</a>
-                        </div>
-                    </div>
-                    <div class="img-portfolio-hover col">
-                        <a href="https://www.behance.net/gallery/80599725/Yosy-Finol-Rebranding" target="_blank"><img
-                                src="img/a1145580599725.5ce5ac218a422.jpg" alt="Yosy Finol - Rebranding"></a>
-
-                        <div class="portfolio-info">
-                            <a href="https://www.behance.net/gallery/80599725/Yosy-Finol-Rebranding" target="_blank"> <i
-                                    class="fas fa-arrow-alt-circle-right"></i>Yosy Finol - Rebranding</a>
-                            <a href="https://www.behance.net/gallery/80599725/Yosy-Finol-Rebranding"
-                                target="_blank">March - 2019</a>
-                        </div>
-                    </div>
-                    <div class="w-100 d-none d-md-block"></div>
-                    <div class="img-portfolio-hover col">
-                        <a href="https://www.behance.net/gallery/90168727/ADS-VOCE-VOCE-by-Greice-Santo?tracking_source=project_owner_other_projects"
-                            target="_blank"><img src="img/greice-santo.PNG" alt="ADS - VOCE VOCE by Greice Santo"></a>
-                        <div class="portfolio-info">
-                            <a href=""><i class="fas fa-arrow-alt-circle-right"></i>ADS - VOCE VOCE by Greice Santo</a>
-                            <a href="">January - 2020</a>
-                        </div>
-                    </div>
-                    <div class="img-portfolio-hover col">
-                        <a href="https://www.behance.net/gallery/80599725/Yosy-Finol-Rebranding" target="_blank"><img
-                                src="img/a1145580599725.5ce5ac218a422.jpg" alt="Yosy Finol - Rebranding"></a>
-
-                        <div class="portfolio-info">
-                            <a href="https://www.behance.net/gallery/80599725/Yosy-Finol-Rebranding" target="_blank"> <i
-                                    class="fas fa-arrow-alt-circle-right"></i>Yosy Finol - Rebranding</a>
-                            <a href="https://www.behance.net/gallery/80599725/Yosy-Finol-Rebranding"
-                                target="_blank">March - 2019</a>
-                        </div>
-                    </div>
-                </div>
-            </li>
-                <li class="container-fluid justify-content-center align-items-center p-0 pagination">
-                    <p><a href="">1</a>, <a href="">2</a>, <a href="">3</a>, <a href="">4</a>, <a href="">...</a> <a href="">last</a></p>
-                </li>
-        </ul>
-        <ul class="row no-gutters">
-                <li class="col container-fluid p-0" class="row no-gutters">
-                    <h4 class="col">Do you like my work? <br>
+    <main class="container-fluid p-0">
+        <section class="row no-gutters search-section" id="portfolio-search-imput">
+            <h4>Looking for a specific project?</h4>
+            <input type="text"><i class="fas fa-search"></i>
+        </section>
+        <section class="row no-gutters" id="portfolio-item-container">
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+                <li>6</li>
+            </ul>
+        </section>
+        <section>
+            <p class="pagination"><a href="">1, 2, 3, 4, 5 ... Last</a></p>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <h4>Do you like my work? <br>
                         Need anything done? <br>
                         Just wanna say hi?<br>
                         Tell me all about it!</h4>
                 </li>
-                <li class="row no-gutters">
-                    <a class="col" href="contact.html">LET'S TALK</a>
+                <li>
+                    <a href="contact.html">LET'S TALK</a>
                 </li>
-        </ul>
+            </ul>
+        </section>
     </main>
     <footer class="container-fluid p-0">
-        <div class="row no-gutters" id="footer-info">
+        <div class="row no-gutters">
             <div class="col container-fluid p-0">
                 <div class="row d-flex justify-content-between no-gutters" id="footer-logo">
                     <div class="col d-flex align-items-center">
@@ -196,7 +142,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col d-flex flex-column">
+                    <div class="col d-flex flex-column container-fluid p-0">
                         <h5>Follow me on instagram!</h5>
                         <ul class="row no-gutters">
                             <li clasS="col">
@@ -222,7 +168,7 @@
                 </a>
             </div>
         </div>
-        <div class="row no-gutters" id="copyright-text">
+        <div id="copyright-text">
             <p>© 2021 <a href="https://maria-briceno.com">Maria Briceño</a>, All Rights Reserved.</p>
         </div>
 
