--- a/contact.html
+++ b/contact.html
@@ -48,97 +48,34 @@
                                 class="fab fa-instagram"></i></a> </li>
             </div>
             </div>
-
         </nav>
+
     </header>
-    <main class="container-fluid justify-content-center p-0" id="portfolio">
-        <ul class="row d-flex no-gutters" id="portfolio-galery">
-            <li><h4>Looking for a specific project?</h4></li>
-            <li><input type="text"><i class="fas fa-search"></i></li>
-            
-        </ul>
-        <ul class="d-flex flex-column justify-content-center align-items-center " id="portfolio">
-            <li class="container-fluid justify-content-center p-0">
-                <div class="row d-flex no-gutters" id="portfolio-galery">
-                    <div class="img-portfolio-hover col">
-                        <a href="https://www.behance.net/gallery/105270129/Animated-Character-2d-animation-experiment"
-                            target="_blank"><img src="img/dfedbb105270129.5f7526302ae01.jpg"
-                                alt="Animated Character"></a>
-
-                        <div class="portfolio-info">
-                            <a href=""> <i class="fas fa-arrow-alt-circle-right"></i>Animated Character</a>
-                            <a href="">September - 2020</a>
-                        </div>
+    <main class="container-fluid justify-content-center p-0">
+        <ul class="d-flex align-items-center no-gutters" id="contact">
+            <li id="contact-form">
+                <form id="myform" action="/">
+                    <h5>Contact Us</h5>
+                    <div class="info">
+                        <input class="name" type="text" name="name" placeholder="Full name" required> <br>
+                        <input type="text" name="name" placeholder="Email" required><br>
+                        <input type="text" name="name" placeholder="Website"><br>
                     </div>
-                    <div class="img-portfolio-hover col">
-                        <a href="https://www.behance.net/gallery/105271387/Frame-by-frame-Animation"
-                            target="_blank"></a>
-                        <img src="img/framebyframe.PNG" alt="Frame-by-frame">
-                        <div class="portfolio-info">
-                            <a href=""><i class="fas fa-arrow-alt-circle-right"></i>Frame-by-frame</a>
-                            <a href="">September - 2020</a>
-                        </div>
+                    <p>Message</p>
+                    <div>
+                        <textarea rows="4"></textarea>
                     </div>
-                    <div class="w-100 d-none d-md-block"></div>
-                    <div class="img-portfolio-hover col">
-                        <a href="https://www.behance.net/gallery/90168727/ADS-VOCE-VOCE-by-Greice-Santo?tracking_source=project_owner_other_projects"
-                            target="_blank"><img src="img/greice-santo.PNG" alt="ADS - VOCE VOCE by Greice Santo"></a>
-                        <div class="portfolio-info">
-                            <a href=""><i class="fas fa-arrow-alt-circle-right"></i>ADS - VOCE VOCE by Greice Santo</a>
-                            <a href="">January - 2020</a>
-                        </div>
-                    </div>
-                    <div class="img-portfolio-hover col">
-                        <a href="https://www.behance.net/gallery/80599725/Yosy-Finol-Rebranding" target="_blank"><img
-                                src="img/a1145580599725.5ce5ac218a422.jpg" alt="Yosy Finol - Rebranding"></a>
-
-                        <div class="portfolio-info">
-                            <a href="https://www.behance.net/gallery/80599725/Yosy-Finol-Rebranding" target="_blank"> <i
-                                    class="fas fa-arrow-alt-circle-right"></i>Yosy Finol - Rebranding</a>
-                            <a href="https://www.behance.net/gallery/80599725/Yosy-Finol-Rebranding"
-                                target="_blank">March - 2019</a>
-                        </div>
-                    </div>
-                    <div class="w-100 d-none d-md-block"></div>
-                    <div class="img-portfolio-hover col">
-                        <a href="https://www.behance.net/gallery/90168727/ADS-VOCE-VOCE-by-Greice-Santo?tracking_source=project_owner_other_projects"
-                            target="_blank"><img src="img/greice-santo.PNG" alt="ADS - VOCE VOCE by Greice Santo"></a>
-                        <div class="portfolio-info">
-                            <a href=""><i class="fas fa-arrow-alt-circle-right"></i>ADS - VOCE VOCE by Greice Santo</a>
-                            <a href="">January - 2020</a>
-                        </div>
-                    </div>
-                    <div class="img-portfolio-hover col">
-                        <a href="https://www.behance.net/gallery/80599725/Yosy-Finol-Rebranding" target="_blank"><img
-                                src="img/a1145580599725.5ce5ac218a422.jpg" alt="Yosy Finol - Rebranding"></a>
-
-                        <div class="portfolio-info">
-                            <a href="https://www.behance.net/gallery/80599725/Yosy-Finol-Rebranding" target="_blank"> <i
-                                    class="fas fa-arrow-alt-circle-right"></i>Yosy Finol - Rebranding</a>
-                            <a href="https://www.behance.net/gallery/80599725/Yosy-Finol-Rebranding"
-                                target="_blank">March - 2019</a>
-                        </div>
-                    </div>
-                </div>
+                    <button type="submit" href="/">Submit</button>
+                </form>
             </li>
-                <li class="container-fluid justify-content-center align-items-center p-0 pagination">
-                    <p><a href="">1</a>, <a href="">2</a>, <a href="">3</a>, <a href="">4</a>, <a href="">...</a> <a href="">last</a></p>
-                </li>
+            <li id="contact-image">
+                <img src="img/IMG_1074-d.jpg" width="50px" alt="Maria Briceño">
+            </li>
         </ul>
-        <ul class="row no-gutters">
-                <li class="col container-fluid p-0" class="row no-gutters">
-                    <h4 class="col">Do you like my work? <br>
-                        Need anything done? <br>
-                        Just wanna say hi?<br>
-                        Tell me all about it!</h4>
-                </li>
-                <li class="row no-gutters">
-                    <a class="col" href="contact.html">LET'S TALK</a>
-                </li>
-        </ul>
+
     </main>
     <footer class="container-fluid p-0">
-        <div class="row no-gutters" id="footer-info">
+        <div class="row no-gutters">
             <div class="col container-fluid p-0">
                 <div class="row d-flex justify-content-between no-gutters" id="footer-logo">
                     <div class="col d-flex align-items-center">
@@ -196,7 +133,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col d-flex flex-column">
+                    <div class="col d-flex flex-column container-fluid p-0">
                         <h5>Follow me on instagram!</h5>
                         <ul class="row no-gutters">
                             <li clasS="col">
@@ -222,19 +159,16 @@
                 </a>
             </div>
         </div>
-        <div class="row no-gutters" id="copyright-text">
+        <div id="copyright-text">
             <p>© 2021 <a href="https://maria-briceno.com">Maria Briceño</a>, All Rights Reserved.</p>
         </div>
 
     </footer>
-
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
-
     <script src="js/main.js"></script>
 </body>
 
