basic structure added to the pages

--- a/blog.html
+++ b/blog.html
@@ -42,49 +42,137 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navigation-social-media">
                     <li class="nav-item"> <a class="nav-link" href="https://behance.net/mariabriceno" target="_blank"><i
                                 class="fab fa-behance"></i></a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="https://linkedin.com/bmaria" target="_blank"><i
+                    <li class="nav-item"> <a class="nav-link" href="https://linkedin.com/in/bmaria" target="_blank"><i
                                 class="fab fa-linkedin"></i></a> </li>
                     <li class="nav-item"> <a class="nav-link" href="https://instagram.com/bsmaria_" target="_blank"><i
                                 class="fab fa-instagram"></i></a> </li>
             </div>
             </div>
-
         </nav>
     </header>
-    <main class="container-fluid p-0">
-        <section class="row no-gutters search-section" id="portfolio-search-imput">
-            <h4>Looking for a specific project?</h4>
-            <input type="text"><i class="fas fa-search"></i>
-        </section>
-        <section class="row no-gutters" id="portfolio-item-container">
-            <ul>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
-                <li>4</li>
-                <li>5</li>
-                <li>6</li>
-            </ul>
-        </section>
-        <section>
-            <p class="pagination"><a href="">1, 2, 3, 4, 5 ... Last</a></p>
-        </section>
-        <section>
-            <ul>
-                <li>
-                    <h4>Do you like my work? <br>
+    <main class="container-fluid justify-content-center p-0" id="portfolio">
+        <ul class="row justify-content-center align-items-center no-gutters" id="portfolio-search-bar">
+            <li class="col d-flex flex-row justify-content-around align-items-center">
+                <h4 class="search-title">Looking for a specific project?</h4>
+                <div class="search-bar">
+                    <input type="text" placeholder="Write here"><a href="#"><i class="fas fa-search"></i></a>
+                </div>
+            </li>            
+        </ul>
+        <ul class="d-flex flex-column justify-content-center align-items-center " id="portfolio">
+            <li class="container-fluid p-0">
+                <div class="row justify-content-between title-section no-gutters" id="portfolio-title">
+                    <div class="col-md-7">
+                        <h4>Latest Projects</h4>
+                    </div>
+                </div>
+            </li>
+            <li class="container-fluid p-0">
+                <div class="row">
+                <!-- AQUI VAN LAS TARJETAS -->
+                <div class="col card blog-card">
+                    <a href=""><img class="card-img-top" src="img/dfedbb105270129.5f7526302ae01.jpg"
+                            alt="Card image cap"></a>
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">Buenos Aires,Argentina - published by <a
+                                    href="">bsmaria</a> - <a href="">3 mins ago</a> </small></p>
+                        <hr>
+                        <h5 class="card-title card-title-mod"><a href="#"> Card title</a></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="card-button">Read more</a>
+                    </div>
+                </div>
+                <div class="col card blog-card">
+                    <a href=""><img class="card-img-top" src="img/dfedbb105270129.5f7526302ae01.jpg"
+                            alt="Card image cap"></a>
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">Buenos Aires,Argentina - published by <a
+                                    href="">bsmaria</a> - <a href="">3 mins ago</a> </small></p>
+                        <hr>
+                        <h5 class="card-title card-title-mod"> <a href="#"> Card title</a></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="card-button ">Read more</a>
+                    </div>
+                </div>
+                <div class="w-100 d-none d-md-block"></div>
+                <div class="col card blog-card">
+                    <a href=""><img class="card-img-top" src="img/dfedbb105270129.5f7526302ae01.jpg"
+                            alt="Card image cap"></a>
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">Buenos Aires,Argentina - published by <a
+                                    href="">bsmaria</a> - <a href="">3 mins ago</a> </small></p>
+                        <hr>
+                        <h5 class="card-title card-title-mod"><a href="#"> Card title</a></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="card-button">Read more</a>
+                    </div>
+                </div>
+                <div class="col card blog-card">
+                    <a href=""><img class="card-img-top" src="img/dfedbb105270129.5f7526302ae01.jpg"
+                            alt="Card image cap"></a>
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">Buenos Aires,Argentina - published by <a
+                                    href="">bsmaria</a> - <a href="">3 mins ago</a> </small></p>
+                        <hr>
+                        <h5 class="card-title card-title-mod"> <a href="#"> Card title</a></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="card-button ">Read more</a>
+                    </div>
+                </div>
+                <div class="w-100 d-none d-md-block"></div>
+                <div class="col card blog-card">
+                    <a href=""><img class="card-img-top" src="img/dfedbb105270129.5f7526302ae01.jpg"
+                            alt="Card image cap"></a>
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">Buenos Aires,Argentina - published by <a
+                                    href="">bsmaria</a> - <a href="">3 mins ago</a> </small></p>
+                        <hr>
+                        <h5 class="card-title card-title-mod"><a href="#"> Card title</a></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="card-button">Read more</a>
+                    </div>
+                </div>
+                <div class="col card blog-card">
+                    <a href=""><img class="card-img-top" src="img/dfedbb105270129.5f7526302ae01.jpg"
+                            alt="Card image cap"></a>
+                    <div class="card-body">
+                        <p class="card-text"><small class="text-muted">Buenos Aires,Argentina - published by <a
+                                    href="">bsmaria</a> - <a href="">3 mins ago</a> </small></p>
+                        <hr>
+                        <h5 class="card-title card-title-mod"> <a href="#"> Card title</a></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="card-button ">Read more</a>
+                    </div>
+                </div>
+                                <!-- AQUI TERMINAN -->
+                            </div>
+            </li>
+                <li class="container-fluid p-0">
+                    <p class="row no-gutters pagination">
+                        <a href="">1</a>, <a href="">2</a>, <a href="">3</a>, <a href="">4</a>, <a href="">...</a> <a href="">last</a>
+                    </p>
+                </li>
+        </ul>
+        <ul class="d-flex flex-row align-items-center" id="contact-bar">
+                <li class="container-fluid p-0">
+                    <h4 class="row no-gutters">Do you like my work?
                         Need anything done? <br>
-                        Just wanna say hi?<br>
+                        Just wanna say hi?
                         Tell me all about it!</h4>
                 </li>
-                <li>
-                    <a href="contact.html">LET'S TALK</a>
+                <li class="row no-gutters">
+                    <a class="col" href="contact.html">LET'S TALK</a>
                 </li>
-            </ul>
-        </section>
+        </ul>
     </main>
     <footer class="container-fluid p-0">
-        <div class="row no-gutters">
+        <div class="row no-gutters" id="footer-info">
             <div class="col container-fluid p-0">
                 <div class="row d-flex justify-content-between no-gutters" id="footer-logo">
                     <div class="col d-flex align-items-center">
@@ -142,7 +230,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col d-flex flex-column container-fluid p-0">
+                    <div class="col d-flex flex-column">
                         <h5>Follow me on instagram!</h5>
                         <ul class="row no-gutters">
                             <li clasS="col">
@@ -168,13 +256,10 @@
                 </a>
             </div>
         </div>
-        <div id="copyright-text">
+        <div class="row no-gutters" id="copyright-text">
             <p>© 2021 <a href="https://maria-briceno.com">Maria Briceño</a>, All Rights Reserved.</p>
         </div>
-
     </footer>
-
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
