--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navigation-social-media">
                     <li class="nav-item"> <a class="nav-link" href="https://behance.net/mariabriceno" target="_blank"><i
                                 class="fab fa-behance"></i></a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="https://linkedin.com/bmaria" target="_blank"><i
+                    <li class="nav-item"> <a class="nav-link" href="https://linkedin.com/in/bmaria" target="_blank"><i
                                 class="fab fa-linkedin"></i></a> </li>
                     <li class="nav-item"> <a class="nav-link" href="https://instagram.com/bsmaria_" target="_blank"><i
                                 class="fab fa-instagram"></i></a> </li>
@@ -52,7 +52,7 @@
 
     </header>
     <main class="container-fluid justify-content-center p-0">
-        <ul class="row d-flex justify-content-center align-items-center  no-gutters " id="hero">
+        <ul class="row d-flex justify-content-center align-items-center no-gutters " id="hero">
             <li class="col">
                 <h1>MOTION
                     AND GRAPHICS
@@ -186,7 +186,7 @@
         </ul>
         <ul class="d-flex align-items-center no-gutters" id="contact">
             <li id="contact-form">
-                <form id="myform" action="/">
+                <form name="contact" id="myform" action="/" method="POST" data-netlify="true">
                     <div class="title-section">
                         <h5>Contact me!</h5>
                         <p>If you need any of my services, you want to give some feedback or you just want to say hi.</p>
