--- a/portfolio.html
+++ b/portfolio.html
@@ -42,22 +42,31 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navigation-social-media">
                     <li class="nav-item"> <a class="nav-link" href="https://behance.net/mariabriceno" target="_blank"><i
                                 class="fab fa-behance"></i></a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="https://linkedin.com/bmaria" target="_blank"><i
+                    <li class="nav-item"> <a class="nav-link" href="https://linkedin.com/in/bmaria" target="_blank"><i
                                 class="fab fa-linkedin"></i></a> </li>
                     <li class="nav-item"> <a class="nav-link" href="https://instagram.com/bsmaria_" target="_blank"><i
                                 class="fab fa-instagram"></i></a> </li>
             </div>
             </div>
-
         </nav>
     </header>
     <main class="container-fluid justify-content-center p-0" id="portfolio">
-        <ul class="row d-flex no-gutters" id="portfolio-galery">
-            <li><h4>Looking for a specific project?</h4></li>
-            <li><input type="text"><i class="fas fa-search"></i></li>
-            
+        <ul class="row justify-content-center align-items-center no-gutters" id="portfolio-search-bar">
+            <li class="col d-flex flex-row justify-content-around align-items-center">
+                <h4 class="search-title">Looking for a specific project?</h4>
+                <div class="search-bar">
+                    <input type="text" placeholder="Write here"><a href="#"><i class="fas fa-search"></i></a>
+                </div>
+            </li>            
         </ul>
         <ul class="d-flex flex-column justify-content-center align-items-center " id="portfolio">
+            <li class="container-fluid p-0">
+                <div class="row justify-content-between title-section no-gutters" id="portfolio-title">
+                    <div class="col-md-7">
+                        <h4>Latest Projects</h4>
+                    </div>
+                </div>
+            </li>
             <li class="container-fluid justify-content-center p-0">
                 <div class="row d-flex no-gutters" id="portfolio-galery">
                     <div class="img-portfolio-hover col">
@@ -121,15 +130,17 @@
                     </div>
                 </div>
             </li>
-                <li class="container-fluid justify-content-center align-items-center p-0 pagination">
-                    <p><a href="">1</a>, <a href="">2</a>, <a href="">3</a>, <a href="">4</a>, <a href="">...</a> <a href="">last</a></p>
+                <li class="container-fluid p-0">
+                    <p class="row no-gutters pagination">
+                        <a href="">1</a>, <a href="">2</a>, <a href="">3</a>, <a href="">4</a>, <a href="">...</a> <a href="">last</a>
+                    </p>
                 </li>
         </ul>
-        <ul class="row no-gutters">
-                <li class="col container-fluid p-0" class="row no-gutters">
-                    <h4 class="col">Do you like my work? <br>
+        <ul class="d-flex flex-row align-items-center" id="contact-bar">
+                <li class="container-fluid p-0">
+                    <h4 class="row no-gutters">Do you like my work?
                         Need anything done? <br>
-                        Just wanna say hi?<br>
+                        Just wanna say hi?
                         Tell me all about it!</h4>
                 </li>
                 <li class="row no-gutters">
@@ -225,10 +236,7 @@
         <div class="row no-gutters" id="copyright-text">
             <p>© 2021 <a href="https://maria-briceno.com">Maria Briceño</a>, All Rights Reserved.</p>
         </div>
-
     </footer>
-
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
